--- a/style.css
+++ b/style.css
@@ -35,3 +35,45 @@ height: 21px;
 width: 21px;
 }
 /* __________nav end___________  */
+
+/* ________________main section start  */
+/* --section-1 start--  */
+.artical{
+    width: 582px;
+    height: 270px;
+}
+.artical-name{
+    margin-bottom: 16px;
+}
+.artical-title{
+    font-size: 52px;
+    width: 582px;
+    margin: 0;
+    padding: 0;
+    color: #3A3A3A;
+}
+.break-title{
+    font-size: 52px;
+    width: 582px;
+    margin: 0;
+    padding: 0;
+    color: #3A3A3A;
+}
+.artical-info{
+    font-weight: 600px;
+    font-size: 16px;
+    color: #3A3A3A;
+    margin-bottom: 16px;
+}
+.press{
+    background: #E02C6D;
+    width: 196px;
+    height: 44px;
+    border: none;
+    padding: 10px 24px;
+    font-size: 16px;
+    border-radius: 41px;
+    color: white;
+}
+/* --section-1 end--  */
+/* main section end___________________  */
