--- a/style.css
+++ b/style.css
@@ -120,4 +120,17 @@ width: 21px;
 }
 /* --section-2 end--  */
 
+/* --section-3 start--  */
+.section-3{
+    margin-top: 100px;
+}
+.title{
+    color: #3A3A3A;
+    font-size: 28px;
+    font-weight: 600;
+    text-align: center;
+
+}
+/* --section-3 end--  */
+
 /* main section end___________________  */
