--- a/style.css
+++ b/style.css
@@ -221,4 +221,61 @@ body{
 /* see more part */
 /* --section-3 end--  */
 
+/* --section-4 start--  */
+.section-4{
+    width: 100%;
+    height: 270px;
+    background-color: #f3f3f3;
+}
+.Features{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.thumbnail{
+    width: 404px;
+    height: 270px;
+    border-radius: 7px;
+}
+.product-title{
+    width: 610px;
+    height: 60px;
+    font-size: 38px;
+    color: #0A0826;
+    margin-bottom: 16px;
+    margin-top: 0;
+}
+.product-info{
+    width: 501px;
+    font-weight: 700;
+    font-size: 16px;
+    color: #6C6C6C;
+}
+.btn-with-arrow{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #E02C6D;
+    width: 155px;
+    height: 44px;
+    padding: 10px 24px;
+    margin-top: 16px;
+}
+.btn-with-arrow:hover {
+    background-color:#002ead;
+    transition: 0.7s;
+}
+.btn{
+    border: none;
+    background-color: transparent;
+    color: white;
+    font-weight: 700;
+    font-size: 16px;
+    
+}
+.fa-solid.white-color {
+    margin-left: 8px;
+    color: white;
+}
+/* --section-4 end--  */
 /* main section end___________________  */
