--- a/style.css
+++ b/style.css
@@ -279,3 +279,58 @@ body{
 }
 /* --section-4 end--  */
 /* main section end___________________  */
+
+/* ____________________footer section_____________________  */
+.section-5{
+    background-color: #0A0826;
+    width: 100%;
+    height: 239px;
+    margin-top: 110px;
+}
+.footer-info{
+    text-align: center;
+    display: grid;
+    justify-content: center;
+    
+    }
+.footer-title{
+    color: white;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+    margin-top: 50px;
+    margin-bottom: 0;
+}
+.footer-mid{
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
+.lil-info{
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+    color: #D9DBE1;
+    letter-spacing: 1px;
+}
+.fa-solid.copy-icon{
+    color: #D9DBE1;
+}
+
+.last{
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+    color: #D9DBE1;
+    margin-top: 3px;
+    margin-bottom: 17px;
+}
+.all-icon{
+    margin-bottom: 50px;
+}
+.fa-brands.same-color{
+    color: white;
+    margin-right: 16px;
+    
+}
+
+/* ____________________footer section end_____________________  */
