--- a/style.css
+++ b/style.css
@@ -288,10 +288,10 @@ body{
     margin-top: 110px;
 }
 .footer-info{
-    text-align: center;
     display: grid;
+    text-align: center;
     justify-content: center;
-    
+
     }
 .footer-title{
     color: white;
@@ -334,3 +334,10 @@ body{
 }
 
 /* ____________________footer section end_____________________  */
+
+/* _________Media queries  */
+
+/* Mobile devices  */
+
+
+/* _________Media queries  */
