--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /* common style or utilities  */
 body{
     font-family: 'Poppins', sans-serif;
-    
+    margin: 0;
+    padding: 0;
 }
 
 /* __________nav start___________  */
 .nav-var{
     width: 100%;
     background-color: rgba(238, 238, 238, 0.404);
-    
 }
 .flex-nav{
     display: flex;
@@ -21,15 +21,17 @@ body{
 }
 .right-nav ul{
     display: flex;
+    align-items: center;
 }
-.right-nav ul li {
+ul li{
     list-style: none;
-    margin-right: 24px;
 }
-.right-nav ul li a{
-    color: #3A3A3A;
+ul li a{
+    font-weight: 600;
+    font-size: 16px;
     text-decoration: none;
-    list-style: none;
+    color: #3A3A3A;
+    margin-right: 34px;
 }
 
 /* __________nav end___________  */
@@ -338,6 +340,8 @@ body{
 /* _________Media queries  */
 
 /* Mobile devices  */
+@media only screen and (max-width: 688px) {
 
+}
 
 /* _________Media queries  */
